--- a/commision/Partials/CSS/index.css
+++ b/commision/Partials/CSS/index.css
@@ -1,12 +1,155 @@
 *{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+.login-header-1{
+    width: 100%;
+    height: 10%;
+    background: linear-gradient(to right, white 20%, cyan);
+    float: right;
+}
+.login-header-2{
+    width: 100%;
+    height: 3%;
+    float: right;
+}
+.login-header-3{
+    width: 100%;
+    height: 10%;
+    float: right;
+}
+.text-header{
+    float: right;
+    margin-right: 2%;
+    margin-top: 15px;
+    font-size: 50px;
+    color: #091b69;
+    font-family: Arial Narrow Bold;
+}
+.login-logo{
+    float: left;
+    margin-top: 5px;
+    margin-left: 7px;
+}
+.logo{
+    height: 200%;
+}
+.link{
+    width: 110px;
+    font-size: 15px;
+    float: right;
+    margin-top: 5px;
+}
+.link a{
+    font-weight: bold;
+    text-decoration: none;
+}
+.link2{
+    width: 110px;
+    font-size: 15px;
+    float: right;
+    margin-top: 5px;
+    padding-top: 250px;
+}
+.link2 a{
+    font-weight: bold;
+    text-decoration: none;
+}
+.header-text1{
+    float: left;
+    flex: 0 0 auto;
+    width: 85%;
+}
+.header-text2{
+    float: right;
+    flex: 0 0 auto;
+    width: 15%;
+}
+.header-text1 h4{
+    height: 100%;
+    text-align: center;
+    margin-left: 18%;
+    padding-top: 2%;
+    font-family: Arial Narrow;
+    font-size: 40px;
+    color: #091b69;
+}
+.header-text2 h2{
+    height: 100%;
+    text-align: center;
+    padding-left: 10%;
+    padding-top: 11%;
+    font-family: Arial Narrow;
+    font-size: 37px;
+    color: #0781a6;
+}
+.line-link{
+    width: 100%;
+    height: 2%;
+    background-color: cyan;
+    position: absolute;
+    margin-top: 10.2%;
+}
+.line-link a{
+    margin-left: 10px;
+    text-decoration: none;
+}
+.line-link0{
+    width: 100%;
+    height: 4%;
+    position: absolute;
+    margin-top: 11.2%;
+    text-align: right;
+}
+.line-link0 a{
+    margin-right: 15px;
+    text-decoration: none;
+    color: #0781a6;
+    font-size: 22px;
+}
+.footer-text{
+    font-size: 18px;
+    text-align: center;
+    position: absolute;
+    margin-top: 16%;
+    padding-left: 43%;
+}
+.line-link-footer{
+    width: 100%;
+    height: 2%;
+    background-color: cyan;
+    position: absolute;
+    margin-top: 14.5%;
+}
+.line-link-footer a{
+    margin-left: 10px;
+    text-decoration: none;
 }
 .container{
-    display: flex;
-    width: 50%;
-    height: 50%;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+    padding-top: 10%;
+    width: 30%;
+}
+.container td input{
+    font-family: Arial Narrow;
+    font-weight: bold;
+    height: 35px;
+    width: 190px;
+    border-radius: 3%;
+    padding-left: 5px;
+    border: #091b69 solid 1px;
+}
+.container .submit{
+    text-align: center;
+    padding-top: 5px;
+}
+.container .btn{
+    text-align: center;
+    color: #091b69;
+    height: 30px;
+    width: 70px;
+    border: none;
+    background: #0781a6;
+    cursor: pointer;
 }
