--- a/commision/Partials/CSS/index.css
+++ b/commision/Partials/CSS/index.css
@@ -7,7 +7,7 @@
 .login-header-1{
     width: 100%;
     height: 10%;
-    background: linear-gradient(to right, white 20%, cyan);
+    background: linear-gradient(to right, white 10%, cyan);
     float: right;
 }
 .login-header-2{
@@ -89,7 +89,7 @@
     width: 100%;
     height: 2%;
     background-color: cyan;
-    position: absolute;
+    position: static;
     margin-top: 10.2%;
 }
 .line-link a{
